# EileForecast

./: .env  README.md  pyproject.toml
conf/: config.yaml
conf/datasets/: Cosmic1.yaml  Cosmic2.yaml  Cosmic3.yaml  LP16_1.yaml  LP16_10.yaml  LP16_11.yaml  LP16_12.yaml  LP16_13.yaml  LP16_14.yaml  LP16_15.yaml  LP16_16.yaml  LP16_17.yaml  LP16_18.yaml  LP16_19.yaml  LP16_2.yaml  LP16_20.yaml  LP16_3.yaml  LP16_4.yaml  LP16_5.yaml  LP16_6.yaml  LP16_7.yaml  LP16_8.yaml  LP16_9.yaml  LP17_1.yaml  LP17_10.yaml  LP17_11.yaml  LP17_12.yaml  LP17_13.yaml  LP17_14.yaml  LP17_15.yaml  LP17_16.yaml  LP17_17.yaml  LP17_18.yaml  LP17_19.yaml  LP17_2.yaml  LP17_20.yaml  LP17_21.yaml  LP17_22.yaml  LP17_23.yaml  LP17_24.yaml  (+14 more)
conf/models/: AutoArima.yaml  AutoETS.yaml  LSTM.yaml  LinearRegression.yaml  SeasAgg.yaml  SeasNaive.yaml  TimesFM.yaml  XGboost.yaml
paper_benchmark/: 1_prepare_cosmic.ipynb  2_prepare_loadprofiles.ipynb  3_eda.ipynb  4_run_paper_benchmark.py  5_get_benchmark_metrics.py  6_plot_benchmark_results.ipynb  benchmark_helpers.py  model_selection.ipynb
src/eile_forecast/: main.py
src/eile_forecast/data_elements/: data.py  holiday_data.py
src/eile_forecast/forecast/: evaluate_forecast.py  forecast_load.py  preprocess_data.py  split_data.py
src/eile_forecast/helpers/: aggregator.py  datefiller.py  filter.py  merger.py
src/eile_forecast/models/: __init__.py  auto_arima.py  auto_ets.py  lstm.py  (+5 more)
thirdPartyLegalNotices/: licences.md
your_benchmark/: 1_prepare_your_data_for_benchmark.ipynb  2_run_your_benchmark.py  3_evaluate_your_benchmark.ipynb
